--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+    // Cloth Config Repository
+    maven { url "https://maven.shedaniel.me/" }
+
+    // Mod Menu Repository
+    maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 fabricApi {
@@ -32,7 +38,14 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+    // Cloth Config API (für das Config System)
+    modApi("me.shedaniel.cloth:cloth-config-fabric:20.0.149") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
+
+    // Mod Menu (damit du den Config-Button im Spiel siehst)
+    modImplementation "com.terraformersmc:modmenu:16.0.0-rc.1"
 }
 
 processResources {
